Added Ip storage / clean project
Modified gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *~
 *.sw[mnpcod]
 *.log
+*.lock
 *.tmp
 *.tmp.*
 log.txt
@@ -28,7 +29,10 @@ plugins/android.json
 plugins/ios.json
 www/
 $RECYCLE.BIN/
+.sourcemaps/
 
 .DS_Store
 Thumbs.db
 UserInterfaceState.xcuserstate
+
+package-lock\.json
