--- a/package.json
+++ b/package.json
@@ -8,27 +8,27 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "2.1.1",
-    "@angular/compiler": "2.1.1",
-    "@angular/compiler-cli": "2.1.1",
-    "@angular/core": "2.1.1",
-    "@angular/forms": "2.1.1",
-    "@angular/http": "2.1.1",
-    "@angular/platform-browser": "2.1.1",
-    "@angular/platform-browser-dynamic": "2.1.1",
-    "@angular/platform-server": "2.1.1",
-    "@ionic/storage": "1.1.6",
-    "ionic-angular": "2.0.0-rc.3",
-    "ionic-native": "2.2.3",
+    "@angular/common": "5.0.3",
+    "@angular/compiler": "5.0.3",
+    "@angular/compiler-cli": "5.0.3",
+    "@angular/core": "5.0.3",
+    "@angular/forms": "5.0.3",
+    "@angular/http": "5.0.3",
+    "@angular/platform-browser": "5.0.3",
+    "@angular/platform-browser-dynamic": "5.0.3",
+    "@ionic-native/core": "^4.3.2",
+    "@ionic-native/splash-screen": "^4.5.3",
+    "@ionic-native/status-bar": "^4.3.2",
+    "@ionic/storage": "2.1.3",
+    "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
-    "localforage": "^1.5.5",
-    "pouchdb": "^6.1.0",
-    "rxjs": "5.0.0-beta.12",
-    "zone.js": "0.6.26"
+    "rxjs": "5.5.2",
+    "sw-toolbox": "3.6.0",
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "^3.1.2",
-    "typescript": "2.0.6"
+    "@ionic/app-scripts": "3.1.7",
+    "typescript": "~2.4.2"
   },
   "cordovaPlugins": [
     "cordova-plugin-whitelist",
@@ -39,5 +39,10 @@
     "ionic-plugin-keyboard"
   ],
   "cordovaPlatforms": [],
-  "description": "Joutes-Ionic"
+  "description": "Joutes-Ionic",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-splashscreen": {}
+    }
+  }
 }
