--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@ionic/storage": "2.1.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "localforage": "^1.5.6",
+    "localforage-cordovasqlitedriver": "^1.7.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
