--- a/package.json
+++ b/package.json
@@ -1,63 +1,67 @@
 {
-    "name": "Joutes-CPNV",
-    "author":
-        "Malorie Genoud, Stéphane Martignier, Quentin Girard, Ilias Goujgali, Struan Forsyth",
-    "homepage": "http://cpnv.ch/",
-    "private": true,
-    "scripts": {
-        "ionic:build": "ionic-app-scripts build",
-        "ionic:serve": "ionic-app-scripts serve"
+  "name": "Joutes-CPNV",
+  "author": "Malorie Genoud, Stéphane Martignier, Quentin Girard, Ilias Goujgali, Struan Forsyth",
+  "homepage": "http://cpnv.ch/",
+  "private": true,
+  "scripts": {
+    "ionic:build": "ionic-app-scripts build",
+    "ionic:serve": "ionic-app-scripts serve"
+  },
+  "dependencies": {
+    "@angular/common": "5.0.3",
+    "@angular/compiler": "5.0.3",
+    "@angular/compiler-cli": "5.0.3",
+    "@angular/core": "5.0.3",
+    "@angular/forms": "5.0.3",
+    "@angular/http": "5.0.3",
+    "@angular/platform-browser": "5.0.3",
+    "@angular/platform-browser-dynamic": "5.0.3",
+    "@ionic-native/core": "^4.3.2",
+    "@ionic-native/local-notifications": "^4.5.3",
+    "@ionic-native/splash-screen": "^4.5.3",
+    "@ionic-native/status-bar": "^4.3.2",
+    "@ionic/storage": "2.1.3",
+    "android-versions": "^1.3.0",
+    "cordova-android": "6.3.0",
+    "cordova-plugin-device": "^2.0.1",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-local-notification": "^0.9.0-beta.2",
+    "cordova-plugin-splashscreen": "~4.0.3",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "ionic-angular": "3.9.2",
+    "ionicons": "3.0.0",
+    "localforage": "^1.5.6",
+    "localforage-cordovasqlitedriver": "^1.7.0",
+    "rxjs": "5.5.2",
+    "sw-toolbox": "3.6.0",
+    "zone.js": "0.8.18"
+  },
+  "devDependencies": {
+    "@ionic/app-scripts": "3.1.7",
+    "typescript": "~2.4.2"
+  },
+  "cordovaPlugins": [
+    "cordova-plugin-whitelist",
+    "cordova-plugin-statusbar",
+    "cordova-plugin-console",
+    "cordova-plugin-device",
+    "cordova-plugin-splashscreen",
+    "ionic-plugin-keyboard"
+  ],
+  "cordovaPlatforms": [],
+  "description": "Joutes-Ionic",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-local-notification": {}
     },
-    "dependencies": {
-        "@angular/common": "5.0.3",
-        "@angular/compiler": "5.0.3",
-        "@angular/compiler-cli": "5.0.3",
-        "@angular/core": "5.0.3",
-        "@angular/forms": "5.0.3",
-        "@angular/http": "5.0.3",
-        "@angular/platform-browser": "5.0.3",
-        "@angular/platform-browser-dynamic": "5.0.3",
-        "@ionic-native/core": "^4.3.2",
-        "@ionic-native/splash-screen": "^4.5.3",
-        "@ionic-native/status-bar": "^4.3.2",
-        "@ionic/storage": "2.1.3",
-        "android-versions": "^1.3.0",
-        "cordova-android": "6.3.0",
-        "cordova-plugin-device": "^2.0.1",
-        "cordova-plugin-ionic-keyboard": "^2.0.5",
-        "cordova-plugin-ionic-webview": "^1.1.16",
-        "cordova-plugin-splashscreen": "~4.0.3",
-        "cordova-plugin-whitelist": "^1.3.3",
-        "ionic-angular": "3.9.2",
-        "ionicons": "3.0.0",
-        "localforage": "^1.5.6",
-        "localforage-cordovasqlitedriver": "^1.7.0",
-        "rxjs": "5.5.2",
-        "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.18"
-    },
-    "devDependencies": {
-        "@ionic/app-scripts": "3.1.7",
-        "typescript": "~2.4.2"
-    },
-    "cordovaPlugins": [
-        "cordova-plugin-whitelist",
-        "cordova-plugin-statusbar",
-        "cordova-plugin-console",
-        "cordova-plugin-device",
-        "cordova-plugin-splashscreen",
-        "ionic-plugin-keyboard"
-    ],
-    "cordovaPlatforms": [],
-    "description": "Joutes-Ionic",
-    "cordova": {
-        "plugins": {
-            "cordova-plugin-splashscreen": {},
-            "cordova-plugin-whitelist": {},
-            "cordova-plugin-device": {},
-            "cordova-plugin-ionic-webview": {},
-            "cordova-plugin-ionic-keyboard": {}
-        },
-        "platforms": ["android"]
-    }
+    "platforms": [
+      "android"
+    ]
+  }
 }
